--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
         <meta charset="utf-8">
         <title>Italian Famous Recipes</title>
     </head>
-    <body></body>
+    <body>
+        <h1>Odin Recipes</h1>
+        <a href="recipes/banana-bread.html">Banana Bread</a>
+    </body>
 </html>
