--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -6,7 +6,36 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <h2>Banana Bread</h2>
     <img src="../img/banabred.jpg" alt="Banana Bread" height="500" width="700">
+    <h2>Banana Bread</h2>
+    <h4>The Banana Bread, a timeless classic, is a delightful, soft, and aromatic treat that captivates the palate with its irresistible banana flavor.</h4>
+    <p>Perfect for breakfast, a snack, or as a sweet treat to share with friends, this dessert is easy to prepare and lends itself to endless variations. Discover our recipe for a Banana Bread that will win the hearts of all homemade sweets enthusiasts</p>
+    <h4>Ingredients:</h4>
+    <ul>
+        <li>3 ripe bananas</li>
+        <li>2 cups of flour</li>
+        <li>1 teaspoon of baking soda</li>
+        <li>1/2 teaspoon of salt</li>
+        <li>1/2 cup of melted butter</li>
+        <li>1 cup of sugar</li>
+        <li>2 eggs</li>
+        <li>1 teaspoon of vanilla extract</li>
+        <li>1/2 cup of Greek yogurt</li>
+        <li>1/2 cup of chopped nuts (optional)</li>
+        <li>Powdered sugar for finishing (optional)</li>
+    </ul>   
+    <h4>Steps:</h4>
+    <ol>
+        <li>Preheat the oven to 180°C and grease a loaf pan.</li>
+        <li>In a large bowl, mash the bananas with a fork until creamy.</li>
+        <li>Add melted butter to the mashed bananas and mix well.</li>
+        <li>Incorporate sugar, eggs, vanilla extract, and Greek yogurt into the bowl. Mix until you achieve a homogeneous mixture.</li>
+        <li>In another bowl, sift flour, baking soda, and salt. Gradually add these dry ingredients to the banana mixture, stirring gently.</li>
+        <li>If you want to enhance your Banana Bread, add chopped nuts and mix well.</li>
+        <li>Pour the batter into the prepared pan and smooth it with a spatula.</li>
+        <li>Bake in the preheated oven for about 60-70 minutes or until a toothpick inserted into the center comes out clean.</li>
+        <li>Once baked, let the Banana Bread cool in the pan for a few minutes, then transfer it to a rack to complete cooling.</li>
+        <li>If desired, dust powdered sugar on top for a delicious finish.</li>
+    </ol>
 </body>
 </html>
