Added "Master Chef" image to the homepage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/banana-bread.html">Banana Bread</a>
+        <img src="../odin-recipes/img/mastchef.jpg">
+        <p><a href="recipes/banana-bread.html">Banana Bread</a><p>
     </body>
 </html>
