TM symbol to "Masterchef Edition" on homepage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Odin Recipes - Masterchef Edtion</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Odin Recipes - Masterchef Edition&trade;</h1>
         <img src="../odin-recipes/img/mastchef.jpg">
         <p><a href="recipes/banana-bread.html">Banana Bread</a><p>
     </body>
