Added the page "parmigiana.html" to recipes

--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -5,7 +5,7 @@
     <title>Banana Bread Recipe</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Odin Recipes - Masterchef Edition&trade;</h1>
     <img src="../img/banabred.jpg" alt="Banana Bread" height="500" width="700">
     <h2>Banana Bread</h2>
     <h4>The Banana Bread, a timeless classic, is a delightful, soft, and aromatic treat that captivates the palate with its irresistible banana flavor.</h4>
