Finished "Parmigiana.html" recipe page

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Odin Recipes - Masterchef Edition&trade;</h1>
         <img src="../odin-recipes/img/mastchef.jpg">
         <p><a href="recipes/banana-bread.html">Banana Bread</a><p>
+            <p><a href="recipes/parmigiana.html">Sicilian Eggplant Parmesan</a></p>
     </body>
 </html>
