--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <body>
         <h1>Odin Recipes - Masterchef Edition&trade;</h1>
         <img src="../odin-recipes/img/mastchef.jpg">
-        <p><a href="recipes/banana-bread.html">Banana Bread</a><p>
-            <p><a href="recipes/parmigiana.html">Sicilian Eggplant Parmesan</a></p>
+        <ul>
+        <li><a href="recipes/banana-bread.html">Banana Bread</a></li>
+            <li><a href="recipes/parmigiana.html">Sicilian Eggplant Parmesan</a></li>
+        </ul>
     </body>
 </html>
